--- a/application/pipacker/view/common/navigation.html
+++ b/application/pipacker/view/common/navigation.html
@@ -17,7 +17,7 @@
 					</li>
 				</ul>
 			</div>
-			<div class="col-md-2 search"><input type="text" class="search_input" placeholder="搜索"></div>
+			<div class="col-md-2 search"><input type="text" class="search_input" id="shot_search" placeholder="搜索"></div>
 			<div class="col-md-2 support">
 				{if ""!=$user_info}
 					<div class="after_login">
