--- a/application/pipacker/view/mainpage/index.html
+++ b/application/pipacker/view/mainpage/index.html
@@ -94,6 +94,7 @@
 			text-decoration: none;
 		}
 		.more_img{
+			clear: both;
 		    bottom: 20px;
 		    border-top: 1px solid #222;
 		    text-align: center;
@@ -110,26 +111,64 @@
 		    letter-spacing: 1px;
 		    cursor: pointer;
 		}
-		.show_img_content ul li{
+		/*.show_img_content ul li{
 			width:calc(33.33% - 24px);
 			margin: 20px 10px;
 			display: inline-block;
 			text-align: center;
-		}
+		}*/
 		ul{
 			list-style: none;
 			padding: 0;
 			margin: 0;
 		}
-		.show_content_img{
-			vertical-align: middle;
+		.show_img_content{
+			-moz-column-count:4; /* Firefox */
+	        -webkit-column-count:4; /* Safari 和 Chrome */
+	        column-count:4;
+	        -moz-column-gap: 1em;
+	        -webkit-column-gap: 1em;
+	        column-gap: 1em;+
 		}
+		.show_img_box{
+			padding: 15px 0 0 15px;
+			display: inline-block;
+		}
+		.show_content_img{
+			 padding: 10px;
+		     margin: 0 0 10px 0;
+		     -moz-page-break-inside: avoid;
+		     -webkit-column-break-inside: avoid;
+		     break-inside: avoid;
+		}
+
 		.show_content_img img{
-			max-height: 300px;
-		    max-width: 300px;
-		    cursor: pointer;
-		    border-radius: 3px;
-		    box-shadow: 0px 1px 1px rgba(0,0,0,0.2);
+			width: 100%;
+        	margin-bottom:10px;
+        	cursor: pointer;
+		}
+		.show_img_box p{
+			color: #ccc;
+			text-align: center;
+		}
+
+		.pic_div{
+			position: relative;
+		}
+		.modal_tip{
+			display:none;
+			background:rgba(98,98,98,.4);
+			padding:10px;
+			height: 95%;
+			width:100%;
+			cursor: pointer;
+			position: absolute;
+			top:0;
+			left:0;
+			color:#fff;
+		}
+		.modal_tip a{
+			color:#fff;	
 		}
 	</style>
 </head>
@@ -163,28 +202,32 @@
 			  <div class="tab-content show_img_list">
 			    <div role="tabpanel" class="tab-pane active" id="home">
 			    	<div class="show_img_content">
-						<ul class="show_img_ul">
-							{foreach $works_list as $val}
-							<li class="show_content_img">
-								<a href="javascript:;">
-									<img src="{$val.works_src}" class="m_img" data-id="{$val.works_id}">
-									<p>© {$val.user_name}</p>
-								</a>
-							</li>
-							{/foreach}
-						</ul>
+						{foreach $works_list as $val}
+			    		<div class="show_img_box">
+							<div class="show_content_img">
+								<div class="pic_div">
+									<img src="{$val.works_src}" data-id="{$val.works_id}" class="m_img"/>
+									<div class="modal_tip">
+										<h4 class="modal_tip_aaa">{$val.works_title}</h4>
+										{foreach $val.works_tags as $tags}
+											<a href="#" class="modal_tip_aaa">#{$tags}</a>
+										{/foreach}
+									</div>
+								</div>
+								
+								<p>© {$val.user_name}</p>
+							</div>
+							
+						</div>
+						{/foreach}
 					</div>
 			    </div>
 			    <div role="tabpanel" class="tab-pane" id="profile">
 			    	<div class="show_img_content">
-						<ul class="show_img_ul">
-						</ul>
 					</div>
 			    </div>
 			    <div role="tabpanel" class="tab-pane" id="messages">
 			    	<div class="show_img_content">
-						<ul class="show_img_ul">
-						</ul>
 					</div>
 			    </div>
 			  </div>
@@ -196,60 +239,122 @@
 
 	<script src="__PUBLIC_PIPACKER__/pipacker/libarary/Bootstrap3.3.7/js/jquery-1.11.1.min.js"></script>
 	<script src="__PUBLIC_PIPACKER__/pipacker/libarary/Bootstrap3.3.7/js/bootstrap.min.js"></script>
-	<script src="__PUBLIC_PIPACKER__/pipacker/js/user.js?1"></script>
+	<script src="__PUBLIC_PIPACKER__/pipacker/js/user.js"></script>
+	<script src="__PUBLIC_PIPACKER__/pipacker/js/works.js"></script>
 
 	<script>
 		var page = 1;
 		var more_lock = true;
 		var url = "{:url('/qworks/Hot')}";
 		var $show_img_list = $(".show_img_list");
+
+
 		$show_img_list.on("click",function(el){
 			var this_elm = $(el.target);
-			if(this_elm.hasClass("m_img")){
-				var apic_id = this_elm.attr("data-id");
+			if(this_elm.hasClass("modal_tip")){
+				var apic_id = this_elm.siblings('.m_img').attr("data-id");
 				localStorage.setItem("apic_id",apic_id);
 				location.href = "{:url('photoshow/index')}";
+			}
+		});
+		$show_img_list.on("mouseover mouseout",function(el){
+			var this_elm = $(el.target);
+
+			var $allmodal_tip = $(".modal_tip");
+			if(this_elm.hasClass("m_img")){
+				var $modal_tip = this_elm.siblings('.modal_tip');
+				if(el.type=="mouseover"){
+					if($modal_tip.is(":hidden")){
+						$allmodal_tip.stop().hide();
+						$modal_tip.stop().show(500);
+					}
+				}else if(el.type=="mouseout"){
+					if(!$modal_tip.is(":hidden")){
+						// console.log(this_elm);
+
+						// console.log(111);
+						// $modal_tip.stop().hide(500);
+					}
+				}
+			}else if(this_elm.hasClass("modal_tip")){				
+				if(el.type=="mouseover"){
+					this_elm.show(0);
+				}else if(el.type=="mouseout"){
+					this_elm.stop().hide(0);
+				}
+			}else if(this_elm.hasClass("modal_tip_aaa")){
+				var $modal_tip = this_elm.parent('.modal_tip');				
+				if(el.type=="mouseover"){
+					if($modal_tip.is(":hidden")){
+						$modal_tip.stop().show(0);
+					}
+				}else if(el.type=="mouseout"){
+					// $modal_tip.stop().hide(0);
+				}
 			}
 		});
 		var $nav_main_btn = $(".nav_main_btn");
 		// console.log($nav_main_btn);
 		$nav_main_btn.eq(1).on("click",function(){
 			page=1;
-			$.get("{:url('/works')}").done(function(data){
-				if(!$.isEmptyObject(data)){
-						redata = $.parseJSON(data);
-						var str = '';
-						for(var i=0;i<redata.rearray.length;i++){
-							str+='<li class="show_content_img"><a href="javascript:;">'+
-								 '<img src="'+redata.rearray[i].works_src+'" class="m_img" data-id="'+redata.rearray[i].works_id+'">'+
-								 '<p>© '+redata.rearray[i].user_name+'</p></a></li>';		
+			// console.log($show_img_list.find(".show_img_content").eq(1).html());
+			if($show_img_list.find(".show_img_content").eq(1).html()!=''){
+				$.get("{:url('/qworks/Hot')}",{page:page}).done(function(data){
+					if(!$.isEmptyObject(data)){
+							redata = $.parseJSON(data);
+							var str = '';
+							for(var i=0;i<redata.rearray.length;i++){
+								str+='<div class="show_img_box">'+
+									 '<div class="show_content_img">'+
+									 '<div class="pic_div">'+
+									 '<img src="'+redata.rearray[i].works_src+'" data-id="'+redata.rearray[i].works_id+'" class="m_img"/>'+
+									 '<div class="modal_tip">'+
+									 '<h4 class="modal_tip_aaa">{$val.works_title}</h4>'+
+									 '</div>'+
+									 '</div>'+									 
+									 '<p>© '+redata.rearray[i].user_name+'</p>'+
+									 '</div>'+
+									 '</div>';	
+							}
+							$show_img_list.find(".show_img_content").eq(1).html($(str));
+							url = "{:url('/qworks/Hot')}";
+							more_lock = true;
+							$(".more").text("发现更多");
 						}
-						$show_img_list.find(".show_img_ul").eq(1).html($(str));
-						url = "{:url('/works')}";
-						more_lock = true;
-						
-						$(".more").text("发现更多");
-					}
-			});
+				});
+			}
+			
 		});
 		$nav_main_btn.eq(0).on("click",function(){
 			page=1;
-			$.get("{:url('/qworks/Hot')}",{page:page}).done(function(data){
-				if(!$.isEmptyObject(data)){
-						redata = $.parseJSON(data);
-						var str = '';
-						for(var i=0;i<redata.rearray.length;i++){
-							str+='<li class="show_content_img"><a href="javascript:;">'+
-								 '<img src="'+redata.rearray[i].works_src+'" class="m_img" data-id="'+redata.rearray[i].works_id+'">'+
-								 '<p>© '+redata.rearray[i].user_name+'</p></a></li>';	
+			if($show_img_list.find(".show_img_content").eq(0).html()!=""){
+				$.get("{:url('/qworks/Hot')}",{page:page}).done(function(data){
+					if(!$.isEmptyObject(data)){
+							redata = $.parseJSON(data);
+							var str = '';
+							for(var i=0;i<redata.rearray.length;i++){
+								str+='<div class="show_img_box">'+
+									 '<div class="show_content_img">'+
+									 '<div class="pic_div">'+
+									 '<img src="'+redata.rearray[i].works_src+'" data-id="'+redata.rearray[i].works_id+'" class="m_img"/>'+
+									 '<div class="modal_tip">'+
+									 '<h4 class="modal_tip_aaa">{$val.works_title}</h4>'+
+									 '</div>'+
+									 '</div>'+									 
+									 '<p>© '+redata.rearray[i].user_name+'</p>'+
+									 '</div>'+
+									 '</div>';	
+							}
+							$show_img_list.find(".show_img_content").eq(0).html($(str));
+							url = "{:url('/qworks/Hot')}";
+							more_lock = true;
+							$(".more").text("发现更多");
 						}
-						$show_img_list.find(".show_img_ul").eq(0).html($(str));
-						url = "{:url('/qworks/Hot')}";
-						more_lock = true;
-						$(".more").text("发现更多");
-					}
-			});
+				});
+			}
+			
 		});
+		//点击加载更多
 		$(".more").on('click',function(){
 			page++;
 			// console.log(page);
@@ -264,11 +369,20 @@
 							var str = '';
 							if(0==redata.status){
 								for(var i=0;i<redata.rearray.length;i++){
-								str+='<li class="show_content_img"><a href="javascript:;">'+
-								 '<img src="'+redata.rearray[i].works_src+'" class="m_img" data-id="'+redata.rearray[i].works_id+'">'+
-								 '<p>© '+redata.rearray[i].user_name+'</p></a></li>';
+									//创建模型
+								str+='<div class="show_img_box">'+
+									 '<div class="show_content_img">'+
+									 '<div class="pic_div">'+
+									 '<img src="'+redata.rearray[i].works_src+'" data-id="'+redata.rearray[i].works_id+'" class="m_img"/>'+
+									 '<div class="modal_tip">'+
+									 '<h4 class="modal_tip_aaa">{$val.works_title}</h4>'+
+									 '</div>'+
+									 '</div>'+									 
+									 '<p>© '+redata.rearray[i].user_name+'</p>'+
+									 '</div>'+
+									 '</div>';
 								}
-								$show_img_list.find(".show_img_ul").append($(str));
+								$show_img_list.find(".show_img_content").append($(str));
 							}else{
 								more_lock = false;
 								$(".more").text("没有啦");
@@ -279,6 +393,46 @@
 			}else{
 				$(".more").text("没有啦");
 			}
+		});
+		var $shot_search = $('#shot_search');
+		var $search_content = $('.head_img');
+		var $show_img_title = $(".show_img_title");
+		var $show_img = $(".show_img");
+		//搜索
+		$shot_search.on('input propertychange',function(){
+			var key_words = $(this).val();
+			var search_key = {
+				"senddata":{
+					"key_word":key_words,
+				},
+				"url":"{:url('/qworks/Search')}",
+				"callback":function(redata){
+					var str = '';
+					if(redata.length>0){
+						for(var i=0;i<redata.length;i++){
+						str+='<div class="show_img_box">'+
+							 '<div class="show_content_img">'+
+							 '<div class="pic_div">'+
+							 '<img src="'+redata[i].works_src+'" data-id="'+redata[i].works_id+'" class="m_img"/>'+
+							 '<div class="modal_tip">'+
+							 '<h4 class="modal_tip_aaa">'+redata[i].works_title+'</h4>'+
+							 '</div>'+
+							 '</div>'+
+							 '<p>© '+redata[i].user_name+'</p>'+
+							 '</div>'+
+							 '</div>';
+							};
+
+					}
+					$search_content.hide();
+					$show_img_title.hide();
+					$show_img.html();
+					$show_img_list.find(".show_img_content").eq(0).html(str);
+				}
+			};
+			var search = new search_works(search_key);
+			search.search();
+			// console.log(search_data);
 		});
 	</script>
 </body>
