--- a/application/pipacker/view/release/index.html
+++ b/application/pipacker/view/release/index.html
@@ -19,6 +19,7 @@
 	}
 	.container{
 		text-align: center;
+		margin-top: 100px;
 	}
 	.container h1{
 		text-align: center;
@@ -53,14 +54,19 @@
 		display: block;
 		margin-bottom: 20px;
 	}
+	.show_img_list{
+		width: 1190px;
+	}
 </style>
 <body>
+	{include file="common/navigation"}
 	<div class="container">
-		<h1>发布</h1>
+		<h1>发布属于你的精彩</h1>
 		<div class="row">
 			<div class="col-lg-12">
 				<span>请选择发布的文件：</span>
-				<input type="file" id="pic_file" name="pic_file" class="margin_auto margin_bottom">
+				<input type="file" id="pic_file" name="pic_file" class="margin_auto margin_bottom" multiple onchange="javascript:setImagePreviews();">
+				<div id="dd" class="show_img_list"></div>
 			</div>
 		</div>
 		<div>
@@ -139,8 +145,8 @@
 			</div>
 			<div class="row margin_bottom">
 				<div class="col-lg-6 atlas_id">
-					<span>请输入图集：</span>
-					<input type="text">
+					<span>请输入图集编号：</span>
+					<input type="text" value="0">
 				</div>
 				<div class="col-lg-6 works_tags">
 					<span>请输入图片标签：</span>
@@ -157,6 +163,55 @@
 	</script>
 	<script src="__PUBLIC_PIPACKER__/pipacker/libarary/Bootstrap3.3.7/js/jquery-1.11.1.min.js"></script>
 	<script src="__PUBLIC_PIPACKER__/pipacker/libarary/Bootstrap3.3.7/js/bootstrap.min.js"></script>
-	<script src="__PUBLIC_PIPACKER__/pipacker/js/release.js?2"></script>
+	<script src="__PUBLIC_PIPACKER__/pipacker/js/release.js?3"></script>
+	<script src="__PUBLIC_PIPACKER__/pipacker/js/user.js?1"></script>
+	<script type="text/javascript">
+	//下面用于多图片上传预览功能
+	function setImagePreviews() {
+	    var docObj = document.getElementById("pic_file");
+	    var dd = document.getElementById("dd");
+	    dd.innerHTML = "";
+	    var fileList = docObj.files;
+	    for (var i = 0; i < fileList.length; i++) {
+	        dd.innerHTML += "<div style='float: left;margin-top: 10px;' > <img id='img" + i + "'  /> </div>";
+	        var imgObjPreview = document.getElementById("img"+i);
+	        if (docObj.files && docObj.files[i]) {
+	        //火狐下，直接设img属性
+	        // imgObjPreview.style.display = 'block';
+	            imgObjPreview.style.width = '160px';
+	            imgObjPreview.style.height = '130px';
+	            imgObjPreview.style.margin = '5px';
+	            imgObjPreview.style.borderRadius = '5px';
+	                //imgObjPreview.src = docObj.files[0].getAsDataURL();
+	                //火狐7以上版本不能用上面的getAsDataURL()方式获取，需要一下方式
+	            imgObjPreview.src = window.URL.createObjectURL(docObj.files[i]);
+	        }
+	        else {
+	               //IE下，使用滤镜
+	            docObj.select();
+	            var imgSrc = document.selection.createRange().text;
+	            var localImagId = document.getElementById("img" + i);
+	                //必须设置初始大小
+	            localImagId.style.width = "160px";
+	            localImagId.style.height = "130px";
+	            imgObjPreview.style.margin = '5px';
+	            imgObjPreview.style.borderRadius = '5px';
+	                //图片异常的捕捉，防止用户修改后缀来伪造图片
+	            try {
+	                localImagId.style.filter = "progid:DXImageTransform.Microsoft.AlphaImageLoader(sizingMethod=scale)";
+	                localImagId.filters.item("DXImageTransform.Microsoft.AlphaImageLoader").src = imgSrc;
+	            }
+	            catch (e) {
+	                alert("您上传的图片格式不正确，请重新选择!");
+	                return false;
+	            }
+	            imgObjPreview.style.display = 'none';
+	            document.selection.empty();
+	        }
+	    }
+	        return true;
+
+	}
+	</script>
 </body>
 </html>
