--- a/application/admin/view/goods/add.html
+++ b/application/admin/view/goods/add.html
@@ -9,6 +9,10 @@
         <input type="text" id="goods_name" name="goods_name" value="" class="form-control">
     </div>
     <div class="form-group clearfix">
+        <label>商品介绍</label>
+        <input type="text" id="goods_info" name="goods_info" value="" class="form-control">
+    </div>
+    <div class="form-group clearfix">
         <label>商品库存</label>
         <input type="text" id="goods_num" name="goods_number" value="" class="form-control">
     </div>
